<resources>
    <string name="app_name" translatable="false">Chord Reader 2</string>
    <string name="about_chord_reader">About Chord Reader 2</string>
    <string name="find_chords_intro_message">First, search the web to find chords.</string>
    <string name="find_chords_second_message">Once you\'ve found the chords you want, click here.</string>
    <string name="loading">Loading…</string>
    <string name="chord_search_hint">Enter song/artist name</string>
    <string name="chords_keyword">chords</string>
    <string name="chords_found">Chords identified. Click here to confirm.</string>
    <string name="confirm_chordchart">Confirm Chords</string>
    <string name="enter_filename">Enter a filename to save to the SD card:</string>
    <string name="save_chordchart">Save Chord Chart</string>
    <string name="sd_card_not_found">SD card not found.</string>
    <string name="save_file">Save File</string>
    <string name="file_saved">File saved.</string>
    <string name="unable_to_save_file">Unable to save file.</string>
    <string name="enter_good_filename">Please enter a valid filename.</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="new_file">New File</string>
    <string name="open_file">Open File</string>
    <string name="manage_saved_files">Manage Songs</string>
    <string name="no_saved_files">No saved files found.</string>
    <string name="search_for_chords">Search</string>
    <string name="save_chords">Save</string>
    <string name="overwrite_file">The existing file will be overwritten.</string>
    <string name="overwrite_file_title">Overwrite File</string>
    <string name="transpose">Transpose</string>
    <string name="select_files_to_delete">Select files to delete.</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_saved_file">Delete File(s)</string>
    <string name="are_you_sure">Are you sure? %d file(s) will be deleted.</string>
    <string name="files_deleted">%d file(s) deleted.</string>
    <string name="capo_title">Capo on Fret:</string>
    <string name="transpose_title">Transpose (half-steps):</string>
    <string name="refresh">Refresh</string>
    <string name="stop">Stop</string>
    <string name="stopping">Stopping…</string>
    <string name="transposing">Transposing</string>
    <string name="please_wait">Please wait…</string>
    <string name="loading_title">Loading</string>
    <string name="sort_az">Sort A-Z</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="edit">Edit</string>
    <string name="edit_chords">Edit Chords</string>
    <string name="no_chord_available">No fingering available.</string>
    <string name="variation" translatable="false">Var.</string>
    <string name="pref_text_size" translatable="false">text_size</string>
    <string name="pref_text_size_title">Text Size</string>
    <string name="pref_scheme" translatable="false">color_scheme</string>
    <string name="pref_scheme_title">Color Scheme</string>
    <string name="pref_scheme_system" translatable="false">Automatic</string>
    <string name="pref_scheme_dark" translatable="false">Dark</string>
    <string name="pref_scheme_light" translatable="false">Light</string>
    <string name="pref_scheme_android" translatable="false">Android</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_basic_configuration">Basic configuration</string>
    <string name="pref_note_naming" translatable="false">note_naming</string>
    <string name="pref_note_naming_title">Note Naming</string>
    <string name="pref_note_naming_value_english" translatable="false">English</string>
    <string name="pref_note_naming_value_english_sharps" translatable="false">EnglishWithSharps</string>
    <string name="pref_note_naming_value_northern" translatable="false">NorthernEuropean</string>
    <string name="pref_note_naming_value_southern" translatable="false">SouthernEuropean</string>
    <string name="pref_note_naming_english">English</string>
    <string name="pref_note_naming_english_sharps">English with sharps</string>
    <string name="pref_note_naming_northern">Northern European</string>
    <string name="pref_note_naming_southern">Southern European</string>
    <string name="pref_note_naming_explanation_english" translatable="false">A, Bb, B, C, Db, D, etc.</string>
    <string name="pref_note_naming_explanation_english_sharps" translatable="false">A, Bb, B, C, C#, D, etc.</string>
    <string name="pref_note_naming_explanation_northern" translatable="false">A, H, C, D, etc.</string>
    <string name="pref_note_naming_explanation_southern" translatable="false">Do, Re, Mi, Fa, etc.</string>
    <string name="pref_note_naming_default" translatable="false">@string/pref_note_naming_value_english</string>
    <string name="pref_search_engine" translatable="false">searchEngineURL</string>
    <string name="pref_search_engine_default" translatable="false">https://www.startpage.com/sp/search?q=</string>
    <string name="pref_storage_location" translatable="false">storageLocation</string>
    <string name="pref_storage_location_default" translatable="false">content://com.android.externalstorage.documents/tree/primary%3Achord_reader_2</string>
    <string name="pref_instrument" translatable="false">instrument</string>
    <string name="pref_instrument_title">Instrument</string>
    <string name="pref_instrument_default" translatable="false">Guitar</string>
    <string name="settings">Settings</string>
    <string name="pref_first_run" translatable="false">first_run3</string>
    <string name="pref_first_run_title">Reset Introduction</string>
    <string name="pref_first_run_summary">Show introductory message again.</string>
    <string name="first_run_title">Welcome to Chord Reader 2!</string>
    <string name="first_run_message">\n<b>What\'s new in version 2.4.1?</b> \n        <li>Bugfix newlines added below *** header line when saving a song #60</li>\n<li>Preference for Minutes to keep screen on added</li>\n<li>Refactor bulk deletion of files</li>\n<li>Bugfix adapt autoscroll velocity after update per EditView</li>\n<li>Bugfix text scaling on older tablets in SongView</li>\n<li>Bugfix and optimization of sorting by date in ListView</li>\nChord Reader 2 is <b>open source software</b>. \n</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="unsaved_changes_message">Do you want to save your changes?</string>
    <string name="closing_chordreader">Closing ChordReader</string>
    <string name="closing_chordreader_message">Sure you want to close ChordReader?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="No_BPM_found">No BPM value found. Please adjust desired value in first line.</string>
    <string name="pref_search_engine_title">Search engine URL</string>
    <string name="chord_variation_editing">Chord variation editing</string>
    <string name="no_chord_available_add">No fingering available. Please add.</string>
    <string name="new_setlist">New Setlist</string>
    <string name="manage_saved_setlists">Manage Setlists</string>
    <string name="slower_auto_scroll" translatable="false">slower auto scroll</string>
    <string name="start_auto_scroll" translatable="false">start auto-scroll</string>
    <string name="stop_auto_scroll" translatable="false">stop auto-scroll</string>
    <string name="faster_auto_scroll" translatable="false">faster auto-scroll</string>
    <string name="enter_text_to_filter">Enter text to filter</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="web_search">Web Search</string>
    <string name="songs">Songs</string>
    <string name="setlists">Setlists</string>
    <string name="cancel">Cancel</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="of"> of </string>
    <string name="help">Help</string>
    <string name="file_selection_for_setlist">Select songs for setlist</string>
    <string name="no_local_songs">No songs found on your device. Perform a web search.</string>
    <string name="no_setlists">No setlists stored on your device. Create a new one.</string>
    <string name="add_to_setlist">Add to a setlist</string>
    <string name="storage_location">Storage location</string>
    <string name="help_page"><![CDATA[<h2>1. Basic concept</h2><p>Chordreader 2 is designed to serve as a digital songbook. You can use this app to search for chords and song lyrics on the Internet or create them yourself. These are then stored locally on your device as a text file in the chord_reader_2 directory in the base directory. You can thus customize the lyrics according to your needs and share or print your individual song versions. Setlists are also saved as text files and can be used in the same way.</p><p>For navigation the Nav Slider is always available by swiping from the left edge of the screen to the right.</p><p>With additional apps, such as Syncthing or Nextcloud, you can easily sync your personal song versions on multiple devices or share them with others.</p>
    <h2>2. Web Search</h2><p>With Web Search you can search the Internet for chords and song lyrics using your favorite search engine (see Settings). Once you find the right page with the chords, Chord Reader 2 extracts the chords and song lyrics. By tapping the blue button above the blue framed internet browser, the result will be shown to you. By confirming, the song is then displayed in the Song View and can then be saved.</p>
    <h2>3. Song View</h2><p>In the Song View, you can adjust the text size using two-finger zoom. The text size is then saved for the respective song in the app\'s internal database.</p> <p>The Song View offers an auto-scroll function. Based on the BPM value Beats per Minute and the auto-scroll correction factor, which are stored in the header of the file, the scroll speed is calculated. For this the following basic assumption is made:<i>For two lines (text line + chords above it) 4 beats are assumed.</i><br> The BPM value also determines the flashing speed of the metronome (blue flashing play button). The auto-scroll correction factor adjusts the scroll speed and can be changed dynamically with the plus and minus buttons. This may be necessary, for example, if a song file was created on a smartphone and is then to be displayed on a tablet. Auto-scroll is started and stopped with the Play button. This can also be started and stopped by double tapping the display.</p><p>The color style of the Song View can be switched between Light or Dark in the settings.</p><p>The transpose function offers on the one hand the possibility to adjust the pitch of the chords to the vocal pitch through the transpose slider. On the other hand, you can use the Capo slider to change the chords as if you were using a capo on the selected fret. This is useful, for example, when playing with two guitars, one with capo and the second with adjusted chords but without capo.</p>
    <h2>4. Setlists</h2><p>Setlists are used to display songs that are stored as a file on the device in a predefined order and to switch between them directly.</p><p>After creating a new Setlist, you can add songs in a selection screen. The order can then be adjusted using drag and drop (blue double bar). Individual songs can be removed from the respective setlist with the delete button (blue trash can). From the song view, the current song can also be added to a setlist via the menu.</p><p>When a song is opened from the setlist view, two additional buttons (left/right arrow) are available in the song view. With these can be switched according to the order of the setlist between the songs directly forward or back.</p>]]></string>
    <string name="storage_access">Storage access</string>
</resources>