<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_transpose"
        android:alphabeticShortcut="@string/transpose"
        android:icon="@drawable/ic_menu_music_up"
        android:title="@string/transpose"
        app:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource"/>

    <item
        android:id="@+id/menu_edit_file"
        android:alphabeticShortcut="@string/edit"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource"/>

    <item
        android:id="@+id/menu_save_chords"
        android:alphabeticShortcut="@string/save_chords"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/save_chords"
        app:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menu_add_to_setlist"
        android:title="@string/add_to_setlist"
        android:icon="@drawable/ic_menu_add"
        app:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource"/>

</menu>